--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[tests]
+        wget -q https://raw.githubusercontent.com/Beakerboy/VBA_Tokenizer/ANTLR/vba.g4
+        antlr4 -Dlanguage=Python3 vba.g4
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
