--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -61,4 +61,4 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --show-source --statistics --exclude ['antlr']
+        flake8 . --count --show-source --statistics --exclude antlr
