--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -62,3 +62,6 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --show-source --statistics --exclude antlr
+    - name: Static Test with Mypy
+      run: |
+        mypy src/
