--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ classifiers = [
 ]
 dependencies = [
   'PyYAML',
-  'antlr4-python3-runtime'
+  'antlr4-python3-runtime',
+  'antlr4-tools'
 ]
 [project.optional-dependencies]
 tests = [
