--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,12 @@ tests = [
 "Homepage" = "https://github.com/Beakerboy/VBA-Linter"
 "Bug Tracker" = "https://github.com/Beakerboy/VBA-Linter/issues"
 
+[tool.coverage.run]
+omit = [
+    # omit this directory
+    "src/antlr/*",
+    ]
+    
 [tool.pytest.ini_options]
 pythonpath = "src"
 testpaths = [
