--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "vba_lint"
+name = "vba_linter"
 version = "0.0.1"
 authors = [
   { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
