--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ classifiers = [
 dependencies = [
   'PyYAML',
   'antlr4-python3-runtime',
-  'antlr4-tools'
+  'antlr4-tools',
+  'antlr4-vba'
 ]
 [project.optional-dependencies]
 tests = [
