--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,8 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[tests]
-        wget -q https://raw.githubusercontent.com/Beakerboy/VBA_Tokenizer/ANTLR/vba.g4
-        antlr4 -Dlanguage=Python3 vba.g4
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -62,4 +60,4 @@ jobs:
         flake8 . --count --show-source --statistics --exclude antlr
     - name: Static Test with Mypy
       run: |
-        mypy --exclude /antlr/ src/
+        mypy src/
