Add editor config

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
+      - editorconfig
   pull_request:
 
 jobs:
