--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
 [project.optional-dependencies]
 tests = [
   'coveralls',
-  'flake8-annotations'
+  'flake8-annotations',
   'mypy',
   'pep8-naming',
   'pytest',
