--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
   'PyYAML',
   'antlr4-python3-runtime',
   'antlr4-tools',
-  'antlr4-vba'
+  'antlr4-vba<0.0.11'
 ]
 [project.optional-dependencies]
 tests = [
